--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@graphql-tools/graphql-file-loader": "^7.0.1",
+    "@graphql-tools/load": "^7.0.1",
+    "@graphql-tools/schema": "^8.0.1",
     "apollo-server": "^3.1.1",
     "graphql": "^15.5.1"
   },
