--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "format": "prettier --write $PWD/'src/**/*.{js,ts}'",
     "lint": "eslint 'src/**/*.{js,ts}'",
     "clean": "rm -rf dist",
-    "codegen": "graphql-codegen --config codegen.yml"
+    "codegen": "graphql-codegen --config codegen.yml",
+    "studio": "prisma studio"
   },
   "dependencies": {
     "@graphql-tools/graphql-file-loader": "^7.0.1",
     "@graphql-tools/load": "^7.0.1",
     "@graphql-tools/schema": "^8.0.1",
+    "@prisma/client": "^2.28.0",
     "apollo-server": "^3.1.1",
     "graphql": "^15.5.1"
   },
@@ -23,11 +25,13 @@
     "@graphql-codegen/cli": "^1.21.8",
     "@graphql-codegen/typescript": "^1.23.0",
     "@graphql-codegen/typescript-resolvers": "^1.20.0",
+    "@types/node": "^16.4.8",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.2",
+    "prisma": "2.28.0",
     "ts-node": "^10.1.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
