--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "apollo-server": "^3.1.1",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
-    "jwks-rsa": "^2.0.4"
+    "jwks-rsa": "^2.0.4",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.8",
     "@graphql-codegen/typescript": "^1.23.0",
     "@graphql-codegen/typescript-resolvers": "^1.20.0",
     "@types/node": "^16.4.8",
+    "@types/node-fetch": "^2.5.12",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.32.0",
