--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -1,7 +1,20 @@
 version: '3.8'
 services:
+  # app:
+  #   container_name: apollo-server
+  #   build:
+  #     context: ../
+  #     dockerfile: ../Dockerfile
+  #   ports:
+  #     - 4000:4000
+  #     - 5555:5555
+  #   depends_on:
+  #     - postgres
+  #   env_file:
+  #     - ../.env
   postgres:
     image: postgres:10.3
+    container_name: postgres
     restart: always
     environment:
       - POSTGRES_USER=eringiv3
