--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js",
+    "start": "cp schema.graphql dist/ && node dist/src/index.js",
     "format": "prettier --write $PWD/'src/**/*.{js,ts}'",
     "lint": "eslint 'src/**/*.{js,ts}'",
     "clean": "rm -rf dist",
-    "codegen": "graphql-codegen --config codegen.yml",
-    "studio": "prisma studio"
+    "graphql:codegen": "graphql-codegen --config codegen.yml",
+    "prisma:studio": "prisma studio",
+    "prisma:generate": "prisma generate",
+    "prisma:deploy": "prisma migrate deploy"
   },
   "dependencies": {
     "@graphql-tools/graphql-file-loader": "^7.0.1",
     "@graphql-tools/load": "^7.0.1",
     "@graphql-tools/schema": "^8.0.1",
     "@prisma/client": "^2.28.0",
+    "prisma": "2.28.0",
     "apollo-server": "^3.1.1",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
@@ -35,7 +38,6 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.2",
-    "prisma": "2.28.0",
     "ts-node": "^10.1.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
