--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@graphql-tools/load": "^7.0.1",
     "@graphql-tools/schema": "^8.0.1",
     "@prisma/client": "^2.28.0",
-    "prisma": "2.28.0",
     "apollo-server": "^3.1.1",
+    "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.4",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "prisma": "2.28.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.8",
